Temp commit before daily limit restored
